--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,8 +3,6 @@ name: Build Android APK
 on:
   push:
     branches: [ main, master ]
-  pull_request:
-    branches: [ main, master ]
   workflow_dispatch:
 
 jobs:
@@ -15,70 +13,16 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
 
-    - name: Set up Python
-      uses: actions/setup-python@v4
+    - name: Build with Buildozer in Docker
+      uses: ArtemSBulgakov/buildozer-action@v1
+      id: buildozer
       with:
-        python-version: '3.11'
-
-    - name: Install system dependencies
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y \
-          python3-pip \
-          build-essential \
-          git \
-          zip \
-          unzip \
-          openjdk-17-jdk \
-          autoconf \
-          libtool \
-          pkg-config \
-          zlib1g-dev \
-          libncurses5-dev \
-          libncursesw5-dev \
-          cmake \
-          libffi-dev \
-          libssl-dev \
-          automake \
-          ccache
-
-    - name: Install buildozer and dependencies
-      run: |
-        pip3 install --upgrade pip
-        pip3 install --upgrade wheel
-        pip3 install --upgrade cython==0.29.36
-        pip3 install --upgrade buildozer
-        pip3 install --upgrade colorama appdirs sh jinja2 six
-
-    - name: Cache Buildozer
-      uses: actions/cache@v3
-      with:
-        path: |
-          .buildozer
-        key: ${{ runner.os }}-buildozer-${{ hashFiles('buildozer.spec') }}
-
-    - name: Setup Android environment
-      run: |
-        export USE_SDK_WRAPPER=1
-        export ANDROID_SDK_ROOT=$HOME/.android/sdk
-        
-    - name: Build with Buildozer
-      run: |
-        yes | buildozer android debug
-      continue-on-error: false
+        command: buildozer android debug
+        buildozer_version: stable
 
     - name: Upload APK artifact
       uses: actions/upload-artifact@v4
       with:
         name: amr-dashboard-apk
-
-        path: bin/*.apk
+        path: ${{ steps.buildozer.outputs.filename }}
         retention-days: 30
-
-    - name: Create Release (on tag)
-      if: startsWith(github.ref, 'refs/tags/')
-      uses: softprops/action-gh-release@v1
-      with:
-        files: bin/*.apk
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
