--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,40 +1,44 @@
-name: Build Android APK
+name: Build APK
 
 on:
   push:
-    branches: [ main, master ]
   workflow_dispatch:
 
 jobs:
   build:
-    runs-on: ubuntu-20.04
-
+    runs-on: ubuntu-latest
+    
     steps:
-    - name: Checkout
-      uses: actions/checkout@v4
-
-    - name: Build with Buildozer
-      uses: ArtemSBulgakov/buildozer-action@v1
-      id: buildozer
+    - uses: actions/checkout@v4
+    
+    - name: Install Java
+      uses: actions/setup-java@v3
       with:
-        workdir: .
-        buildozer_version: stable
-
-    - name: Upload artifacts
-      uses: actions/upload-artifact@v4
+        distribution: 'temurin'
+        java-version: '11'
+    
+    - name: Setup Python
+      uses: actions/setup-python@v4
       with:
-        name: package
-        path: ${{ steps.buildozer.outputs.filename }}        
-    - name: Upload build log
-      if: always()
-      uses: actions/upload-artifact@v4
-      with:
-        name: build-log
-        path: build.log
-
+        python-version: '3.10'
+    
+    - name: Install Buildozer
+      run: |
+        pip install buildozer
+        
+    - name: Build APK
+      run: buildozer android debug || echo "Build may have warnings"
+      
+    - name: Find APK
+      run: |
+        find . -name "*.apk" -type f
+        
     - name: Upload APK
       uses: actions/upload-artifact@v4
-      if: success()
+      if: always()
+      with:
+        name: apk
+        path: "**/*.apk"      if: success()
       with:
         name: app-debug
         path: bin/*.apk
