--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,7 +38,4 @@ jobs:
       if: always()
       with:
         name: apk
-        path: "**/*.apk"      if: success()
-      with:
-        name: app-debug
-        path: bin/*.apk
+        path: "**/*.apk"
