--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,6 +24,10 @@ jobs:
     
     - name: Install Buildozer
       run: |
+        sudo apt-get update
+        sudo apt-get install -y build-essential libssl-dev libffi-dev python3-dev
+        pip install --upgrade pip
+        pip install cython==0.29.33
         pip install buildozer
         
     - name: Build APK
