--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,6 +30,11 @@ jobs:
         pip install cython==0.29.33
         pip install buildozer
         
+    - name: Accept Android SDK licenses
+       run: |
+         yes | sdkmanager --licenses || true
+         sdkmanager "build-tools;33.0.0" "platform-tools" "platforms;android-31" || true 
+         
     - name: Build APK
       run: buildozer android debug || echo "Build may have warnings"
       
