--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,11 +30,24 @@ jobs:
         pip install cython==0.29.33
         pip install buildozer
         
-    - name: Accept Android SDK licenses
+    - name: Setup Android SDK
       run: |
-         yes | sdkmanager --licenses || true
-         sdkmanager "build-tools;33.0.0" "platform-tools" "platforms;android-31" || true 
-         
+        export ANDROID_SDK_ROOT=$HOME/.android/sdk
+        mkdir -p $ANDROID_SDK_ROOT
+        cd $ANDROID_SDK_ROOT
+        wget -q https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip
+        unzip -q commandlinetools-linux-9477386_latest.zip
+        mkdir -p cmdline-tools/latest
+        mv cmdline-tools/* cmdline-tools/latest/ 2>/dev/null || true
+        export PATH=$PATH:$ANDROID_SDK_ROOT/cmdline-tools/latest/bin
+        yes | sdkmanager --licenses || echo "Licenses accepted"
+        sdkmanager "build-tools;33.0.0" "platform-tools" "platforms;android-31"
+    
+    - name: Set Android environment
+      run: |
+        echo "ANDROID_SDK_ROOT=$HOME/.android/sdk" >> $GITHUB_ENV
+        echo "$HOME/.android/sdk/cmdline-tools/latest/bin" >> $GITHUB_PATH
+        
     - name: Build APK
       run: buildozer android debug || echo "Build may have warnings"
       
