--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -49,7 +49,10 @@ jobs:
         echo "$HOME/.android/sdk/cmdline-tools/latest/bin" >> $GITHUB_PATH
         
     - name: Build APK
-      run: buildozer android debug || echo "Build may have warnings"
+      run: |
+        export ANDROID_HOME=$HOME/.android/sdk
+        export ANDROID_SDK_ROOT=$HOME/.android/sdk
+        buildozer android debug || echo "Build may have warnings"
       
     - name: Find APK
       run: |
