--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Build with Buildozer
         run: |
           docker run --rm -v "$PWD":/home/user/app kivy/buildozer:latest \
-            bash -c "cd /home/user/app && buildozer android debug"
+            bash -c "cd /home/user/app && yes | buildozer android debug"
 
       - name: Upload APK
         uses: actions/upload-artifact@v4
