--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,10 +13,12 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Build with Buildozer
+      - name: Build with Buildozer in Docker
         run: |
-          docker run --rm -v "$PWD":/home/user/app kivy/buildozer:latest \
-            bash -c "cd /home/user/app && yes | buildozer android debug"
+          docker run --rm -v "$PWD":/home/user/hostcwd \
+            --env BUILDOZER_WARN_ON_ROOT=0 \
+            kivy/buildozer:latest \
+            bash -c "cd /home/user/hostcwd && buildozer android debug"
 
       - name: Upload APK
         uses: actions/upload-artifact@v4
