--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,10 +16,9 @@ jobs:
       - name: Build with Buildozer in Docker
         run: |
           docker run --rm -v "$PWD":/home/user/hostcwd \
-            --env BUILDOZER_WARN_ON_ROOT=0 \
             kivy/buildozer:latest \
-            bash -c "cd /home/user/hostcwd && buildozer android debug"
-
+            buildozer android debug
+            
       - name: Upload APK
         uses: actions/upload-artifact@v4
         with:
