--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,20 +5,20 @@ on:
   workflow_dispatch:
 
 jobs:
-  build-android:
-    name: Build for Android
+  build:
     runs-on: ubuntu-latest
+    container:
+      image: kivy/buildozer:latest
+      options: --user root
 
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Build with Buildozer in Docker
+      - name: Build APK
         run: |
-          docker run --rm -v "$PWD":/home/user/hostcwd \
-            kivy/buildozer:latest \
-            buildozer android debug
-            
+          buildozer android debug
+
       - name: Upload APK
         uses: actions/upload-artifact@v4
         with:
